--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run a one-line script
         run: |
           echo Hello, world!
-          echo ${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}
+          echo ${{ env.DAY_OF_WEEK }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
